--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+astroid==1.4.8
+defusedxml==0.4.1
 Django==1.10
+django-allauth==0.26.1
+isort==4.2.5
+lazy-object-proxy==1.2.2
+mccabe==0.5.2
+oauthlib==1.1.2
 psycopg2==2.6.2
 pyjade==4.0.0
+pylint==1.6.4
+python3-openid==3.0.10
+requests==2.10.0
+requests-oauthlib==0.6.2
 simplejson==3.8.2
 six==1.10.0
+wrapt==1.10.8
 yolk3k==0.9
