Update server conf for prod.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -3,12 +3,14 @@ server {
   server_name minimail.fullweb.io;
   listen 80;
 
-  root /var/www/minimail.fullweb.io;
-	index index.html index.htm;
-
+  client_max_body_size 5M;
+  keepalive_timeout 5;
   charset utf8;
-
   server_tokens off;
+  default_type html;
+
+  root /var/www/minimail.fullweb.io;
+  index index.html index.htm;
 
   gzip            on;
   gzip_disable    msie6;
@@ -23,16 +25,23 @@ server {
   access_log /var/log/nginx/minimail.axx.log;
   error_log /var/log/nginx/minimail.err.log;
 
-  location /static {
-    rewrite ^/(.*)/$ /$1 permanent;
-    alias /var/www/fullweb.minimail.io;
-    expires 30d;
+  location @django_app {
+    proxy_set_header Host $host;
+    proxy_redirect off;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_pass http://127.0.0.1:9999;
   }
 
   location / {
-    proxy_pass http://127.0.0.1:9999;
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    try_files $uri $uri.html $uri/ @django_app =404;
   }
+
+  error_page 500 502 503 504 /500.html;
+  location = /500.html {
+    root /var/www/minimail.fullweb.io/static;
+    internal;
+  }
+
 
 }
