--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -25,6 +25,11 @@ server {
   access_log /var/log/nginx/minimail.axx.log;
   error_log /var/log/nginx/minimail.err.log;
 
+  location ~ /\.git {
+    deny all;
+    return 404;
+  }
+
   location @django_app {
     proxy_set_header Host $host;
     proxy_redirect off;
