--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -7,7 +7,7 @@ server {
   keepalive_timeout 5;
   charset utf8;
   server_tokens off;
-  default_type html;
+  #default_type html;
 
   root /var/www/minimail.fullweb.io;
   index index.html index.htm;
@@ -38,8 +38,16 @@ server {
     proxy_pass http://127.0.0.1:9999;
   }
 
+  location /static {
+    try_files $uri $uri.html $uri/ =404;
+  }
+
+  location /docs {
+    try_files $uri $uri.html $uri/ =404;
+  }
+
   location / {
-    try_files $uri $uri.html $uri/ @django_app =404;
+    try_files $uri @django_app;
   }
 
   error_page 500 502 503 504 /500.html;
