--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
 astroid==1.4.8
+cssselect==0.9.2
+cssutils==1.0.1
 defusedxml==0.4.1
 Django==1.10
 django-allauth==0.26.1
+flake8==3.0.4
 isort==4.2.5
 lazy-object-proxy==1.2.2
+lxml==3.6.4
 mccabe==0.5.2
 oauthlib==1.1.2
 Pillow==3.3.1
+premailer==3.0.1
 psycopg2==2.6.2
+pycodestyle==2.0.0
+pyflakes==1.2.3
 pylint==1.6.4
 python3-openid==3.0.10
 pytz==2016.6.1
 requests==2.10.0
 requests-oauthlib==0.6.2
 simplejson==3.8.2
-StringGenerator==0.1.9
 six==1.10.0
+StringGenerator==0.1.9
 wrapt==1.10.8
 yolk3k==0.9
