--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 astroid==1.4.8
+beautifulsoup4==4.5.1
 cssselect==0.9.2
 cssutils==1.0.1
 defusedxml==0.4.1
 Django==1.10
 django-allauth==0.26.1
 flake8==3.0.4
+html5lib==0.999999999
 isort==4.2.5
 lazy-object-proxy==1.2.2
 lxml==3.6.4
@@ -25,5 +27,6 @@ requests-oauthlib==0.6.2
 simplejson==3.8.2
 six==1.10.0
 StringGenerator==0.1.9
+webencodings==0.5
 wrapt==1.10.8
 yolk3k==0.9
