--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==1.10
 django-allauth==0.26.1
 flake8==3.0.4
 html5lib==0.999999999
+htmlmin==0.1.10
 isort==4.2.5
 lazy-object-proxy==1.2.2
 lxml==3.6.4
