update nginx conf

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -1,3 +1,5 @@
+log_format pixou_log '$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$request';
+
 upstream minimailapp {
 	server 127.0.0.1:9999;
 	#sticky cookie srv_id expires=1h domain=minimail.fullweb.io path=/;
@@ -87,6 +89,11 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://minimailapp;
     }
+
+	location /pixou {
+		access_log /var/log/nginx/minimail_pixou.axx.log;
+		rewrite ^/pixou$ /static/pixou/pix.gif
+	}
 
     location /static {
         try_files $uri $uri.html $uri/ =404;
