test location nginx

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -71,6 +71,12 @@ server {
         add_header Cache-Control "public";
     }
 
+	# pixou white pixel
+	location /pixou {
+		access_log /var/log/nginx/minimail_pixou.axx.log;
+		rewrite ^/pixou$ /static/pixou/pix.gif
+	}
+
     # CSS and Javascript
     location ~* \.(?:css|js)$ {
         expires 1y;
@@ -93,11 +99,6 @@ server {
     location /static {
         try_files $uri $uri.html $uri/ =404;
     }
-
-	location /pixou {
-		access_log /var/log/nginx/minimail_pixou.axx.log;
-		rewrite ^/pixou$ /static/pixou/pix.gif
-	}
 
     location /docs {
         try_files $uri $uri.html $uri/ =404;
