--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -74,7 +74,7 @@ server {
 	# pixou white pixel
 	location /pixou {
 		access_log /var/log/nginx/minimail_pixou.axx.log;
-		rewrite ^/pixou$ /static/pixou/pix.gif
+		rewrite ^/pixou$ /static/pixou/pix.gif;
 	}
 
     # CSS and Javascript
