change log format

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -54,8 +54,15 @@ server {
     # future (if the default expire rule is 1 month). Therefore, do not use a
     # default expire rule with nginx unless your site is completely static
 
+	# pixou white pixel
+	location /pixou {
+		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
+		root /var/www/minimail.fullweb.io/static/;
+		default pix.gif;
+	}
+
     # cache.appcache, your document html and data
-        location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+    location ~* \.(?:manifest|appcache|html?|xml|json)$ {
         expires -1;
     }
 
@@ -70,12 +77,6 @@ server {
         access_log off;
         add_header Cache-Control "public";
     }
-
-	# pixou white pixel
-	location /pixou {
-		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
-		rewrite ^/pixou$ /static/pixou/pix.gif;
-	}
 
     # CSS and Javascript
     location ~* \.(?:css|js)$ {
