--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -58,7 +58,7 @@ server {
 	location /pixou {
 		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
 		root /var/www/minimail.fullweb.io/static/;
-		default pix.gif;
+		index pix.gif;
 	}
 
     # cache.appcache, your document html and data
