test location nginx

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -57,7 +57,7 @@ server {
 	# pixou white pixel
 	location /pixou {
 		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
-		root /var/www/minimail.fullweb.io/static/;
+		root /var/www/minimail.fullweb.io/static/pixou;
 		index pix.gif;
 	}
 
