test location nginx

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -58,6 +58,8 @@ server {
 	location /pixou {
 		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
 		root /var/www/minimail.fullweb.io/static/pixou;
+		index pix.gif;
+		autoindex on;
 	}
 
     # cache.appcache, your document html and data
