test location nginx

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -56,10 +56,8 @@ server {
 
 	# pixou white pixel
 	location /pixou {
-		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
-		root /var/www/minimail.fullweb.io/static/pixou;
-		index pix.gif;
-		autoindex on;
+		access_log /var/log/nginx/minimail_pixou.axx.log;
+		rewrite ^/pixou$ /static/pixou/pix.gif;
 	}
 
     # cache.appcache, your document html and data
