test location nginx

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -56,7 +56,7 @@ server {
 
 	# pixou white pixel
 	location /pixou {
-		access_log /var/log/nginx/minimail_pixou.axx.log;
+		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
 		rewrite ^/pixou$ /static/pixou/pix.gif;
 	}
 
