test location nginx

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -57,7 +57,8 @@ server {
 	# pixou white pixel
 	location /pixou {
 		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
-		rewrite ^/pixou$ /static/pixou/pix.gif;
+		root /var/www/minimail.fullweb.io/static/pixou;
+		autoindex on;
 	}
 
     # cache.appcache, your document html and data
