--- a/requirements.txt
+++ b/requirements.txt
@@ -14,20 +14,21 @@ lxml==3.6.4
 maxminddb==1.2.1
 maxminddb-geolite2==2015.708
 mccabe==0.5.2
+numpy==1.11.2
 oauthlib==1.1.2
+pandas==0.19.0
 Pillow==3.3.1
 premailer==3.0.1
-psycopg2==2.6.2
 pycodestyle==2.0.0
 pyflakes==1.2.3
 pylint==1.6.4
+python-dateutil==2.5.3
 python3-openid==3.0.10
 pytz==2016.6.1
 requests==2.10.0
 requests-oauthlib==0.6.2
 simplejson==3.8.2
 six==1.10.0
-StringGenerator==0.1.9
 webencodings==0.5
 wrapt==1.10.8
 yolk3k==0.9
