--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ oauthlib==1.1.2
 pandas==0.19.0
 Pillow==3.3.1
 premailer==3.0.1
+psycopg2==2.6.2
 pycodestyle==2.0.0
 pyflakes==1.2.3
 pylint==1.6.4
