Add nginx compile flags and ses config.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -1,4 +1,6 @@
-log_format pixou_log '$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$request';
+log_format pixou_open_log '$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language';
+log_format pixou_click_log '$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$arg_uri';
+log_format pixou_ses_log '$msec!!!!!!$request_body';
 
 upstream minimailapp {
 	server 127.0.0.1:9999;
@@ -55,11 +57,36 @@ server {
     # default expire rule with nginx unless your site is completely static
 
 	# pixou white pixel
-	location /pixou {
-		access_log /var/log/nginx/minimail_pixou.axx.log pixou_log;
-		root /var/www/minimail.fullweb.io/static/pixou;
-		autoindex on;
+	location /pixou/open {
+		access_log /var/log/nginx/minimail_pixou_open_log.log pixou_open_log;
+		return 204;
 	}
+
+	location /pixou/click {
+		access_log /var/log/nginx/minimail_pixou_click_log.log pixou_click_log;
+		return 204;
+	}
+
+	location = /post_response {
+        # turn off logging here to avoid double logging
+        access_log off;
+        return 204;
+    }
+
+	location /callback/ses/delivery {
+        access_log /var/log/nginx/minimail_pixou_ses_delivery_axx.log pixou_ses_log;
+        proxy_pass http://127.0.0.1/post_response;
+    }
+
+    location /callback/ses/bounce {
+        access_log /var/log/nginx/minimail_pixou_ses_bounce_axx.log pixou_ses_log;
+        proxy_pass http://127.0.0.1/post_response;
+    }
+
+    location /callback/ses/complaint {
+        access_log /var/log/nginx/minimail_pixou_ses_complain_axx.log pixou_ses_log;
+        proxy_pass http://127.0.0.1/post_response;
+    }
 
     # cache.appcache, your document html and data
     location ~* \.(?:manifest|appcache|html?|xml|json)$ {
