no https for /callbacks/

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -147,7 +147,15 @@ server {
 server {
     server_name minimail.fullweb.io;
     listen 80;
-    return 301 https://$server_name$request_uri;
+
+	location /callbacks/ {
+		access_log /var/log/nginx/minimail.http.axx.log;
+		return 204;
+	}
+
+	location / {
+		return 301 https://$server_name$request_uri;
+	}
 }
 
 server {
