Update callbacks ses conf for http.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -58,12 +58,12 @@ server {
 
 	# pixou white pixel
 	location /pixou/open {
-		access_log /var/log/nginx/minimail_pixou_open_log.log pixou_open_log;
+		access_log /var/log/nginx/minimail.pixou.open.axx.log pixou_open_log;
 		return 204;
 	}
 
 	location /pixou/click {
-		access_log /var/log/nginx/minimail_pixou_click_log.log pixou_click_log;
+		access_log /var/log/nginx/minimail.pixou.click.axx.log pixou_click_log;
 		return 204;
 	}
 
@@ -74,18 +74,18 @@ server {
     }
 
 	location /callback/ses/delivery {
-        access_log /var/log/nginx/minimail_pixou_ses_delivery_axx.log pixou_ses_log;
-        proxy_pass http://127.0.0.1/post_response;
+        access_log /var/log/nginx/minimail.pixou.ses.delivery.axx.log pixou_ses_log;
+        proxy_pass http://minimail.fullweb.io/post_response;
     }
 
     location /callback/ses/bounce {
-        access_log /var/log/nginx/minimail_pixou_ses_bounce_axx.log pixou_ses_log;
-        proxy_pass http://127.0.0.1/post_response;
+        access_log /var/log/nginx/minimail.pixou.ses.bounce.axx.log pixou_ses_log;
+        proxy_pass http://minimail.fullweb.io/post_response;
     }
 
     location /callback/ses/complaint {
-        access_log /var/log/nginx/minimail_pixou_ses_complain_axx.log pixou_ses_log;
-        proxy_pass http://127.0.0.1/post_response;
+        access_log /var/log/nginx/minimail.pixou.ses.complaint.axx.log pixou_ses_log;
+        proxy_pass http://minimail.fullweb.io/post_response;
     }
 
     # cache.appcache, your document html and data
@@ -148,9 +148,16 @@ server {
     server_name minimail.fullweb.io;
     listen 80;
 
+	location = /post_response {
+        # turn off logging here to avoid double logging
+        access_log off;
+        return 204;
+    }
+
 	location /callbacks/ {
-		access_log /var/log/nginx/minimail.http.axx.log;
-		return 204;
+		access_log /var/log/nginx/minimail.axx.log;
+		error_log /var/log/nginx/minimail.err.log;
+		proxy_pass http://minimail.fullweb.io/post_response;
 	}
 
 	location / {
