Update callbacks ses conf for http.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -73,17 +73,17 @@ server {
         return 204;
     }
 
-	location /callback/ses/delivery {
+	location /callbacks/ses/delivery {
         access_log /var/log/nginx/minimail.pixou.ses.delivery.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
 
-    location /callback/ses/bounce {
+    location /callbacks/ses/bounce {
         access_log /var/log/nginx/minimail.pixou.ses.bounce.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
 
-    location /callback/ses/complaint {
+    location /callbacks/ses/complaint {
         access_log /var/log/nginx/minimail.pixou.ses.complaint.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
@@ -154,7 +154,7 @@ server {
         return 204;
     }
 
-	location /callbacks/ {
+	location ^~ /callbacks/ {
 		access_log /var/log/nginx/minimail.axx.log;
 		error_log /var/log/nginx/minimail.err.log;
 		proxy_pass http://minimail.fullweb.io/post_response;
