Fix regex callbacks

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -154,7 +154,7 @@ server {
         return 204;
     }
 
-	location ^~ /callbacks/ {
+	location ^~ /callbacks {
 		access_log /var/log/nginx/minimail.axx.log;
 		error_log /var/log/nginx/minimail.err.log;
 		proxy_pass http://minimail.fullweb.io/post_response;
