Update callback and listen ports

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -9,8 +9,9 @@ upstream minimailapp {
 
 server {
     server_name minimail.fullweb.io;
-    listen 443;
+	listen 80;
 
+    listen 443 ssl;
     ssl_certificate     /etc/letsencrypt/live/minimail.fullweb.io/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/minimail.fullweb.io/privkey.pem;
 
@@ -70,22 +71,32 @@ server {
 	location = /post_response {
         # turn off logging here to avoid double logging
         access_log off;
+		internal;
         return 204;
     }
 
 	location /callbacks/ses/delivery {
         access_log /var/log/nginx/minimail.pixou.ses.delivery.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
+		internal;
     }
 
     location /callbacks/ses/bounce {
         access_log /var/log/nginx/minimail.pixou.ses.bounce.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
+		internal;
     }
 
     location /callbacks/ses/complaint {
         access_log /var/log/nginx/minimail.pixou.ses.complaint.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
+		internal;
+    }
+
+	location /callbacks/ses {
+        access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_log;
+        proxy_pass http://minimail.fullweb.io/post_response;
+		internal;
     }
 
     # cache.appcache, your document html and data
@@ -143,26 +154,16 @@ server {
     }
 }
 
+server {
+    server_name www.minimail.im;
+    listen 80;
+    return 301 https://minimail.fullweb.io$request_uri;
+}
 
 server {
-    server_name minimail.fullweb.io;
+    server_name minimail.im;
     listen 80;
-
-	location = /post_response {
-        # turn off logging here to avoid double logging
-        access_log off;
-        return 204;
-    }
-
-	location ^~ /callbacks {
-		access_log /var/log/nginx/minimail.axx.log;
-		error_log /var/log/nginx/minimail.err.log;
-		proxy_pass http://minimail.fullweb.io/post_response;
-	}
-
-	location / {
-		return 301 https://$server_name$request_uri;
-	}
+    return 301 https://minimail.fullweb.io$request_uri;
 }
 
 server {
