Test fix minimail

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -71,7 +71,6 @@ server {
 	location = /post_response {
         # turn off logging here to avoid double logging
         access_log off;
-		internal;
         return 204;
     }
 
@@ -90,7 +89,7 @@ server {
         proxy_pass http://minimail.fullweb.io/post_response;
     }
 
-	location /callbacks/ses {
+	location ^~ /callbacks {
         access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
