--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -74,22 +74,22 @@ server {
         return 204;
     }
 
-	location /callbacks/ses/delivery {
+	location = /callbacks/ses/delivery {
         access_log /var/log/nginx/minimail.pixou.ses.delivery.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
 
-    location /callbacks/ses/bounce {
+    location = /callbacks/ses/bounce {
         access_log /var/log/nginx/minimail.pixou.ses.bounce.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
 
-    location /callbacks/ses/complaint {
+    location = /callbacks/ses/complaint {
         access_log /var/log/nginx/minimail.pixou.ses.complaint.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
 
-	location ^~ /callbacks {
+	location ^~ /callbacks/.* {
         access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
