Test fix minimail

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -89,7 +89,7 @@ server {
         proxy_pass http://minimail.fullweb.io/post_response;
     }
 
-	location ^~ /callbacks/.* {
+	location /callbacks {
         access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_log;
         proxy_pass http://minimail.fullweb.io/post_response;
     }
