Test fix minimail

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -68,7 +68,7 @@ server {
 		return 204;
 	}
 
-	location = /post_response {
+	location /post_response {
         # turn off logging here to avoid double logging
         access_log off;
         return 204;
@@ -76,22 +76,22 @@ server {
 
 	location = /callbacks/ses/delivery {
         access_log /var/log/nginx/minimail.pixou.ses.delivery.axx.log pixou_ses_log;
-        proxy_pass http://minimail.fullweb.io/post_response;
+        proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
     location = /callbacks/ses/bounce {
         access_log /var/log/nginx/minimail.pixou.ses.bounce.axx.log pixou_ses_log;
-        proxy_pass http://minimail.fullweb.io/post_response;
+        proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
     location = /callbacks/ses/complaint {
         access_log /var/log/nginx/minimail.pixou.ses.complaint.axx.log pixou_ses_log;
-        proxy_pass http://minimail.fullweb.io/post_response;
+        proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
 	location /callbacks {
         access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_log;
-        proxy_pass http://minimail.fullweb.io/post_response;
+        proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
     # cache.appcache, your document html and data
