--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -65,14 +65,14 @@ server {
 
 	location /pixou/click {
 		access_log /var/log/nginx/minimail.pixou.click.axx.log pixou_click_log;
-		add_header Content-Type text/plain
+		add_header 'Content-Type' 'text/plain'
 		return 200 "ok";
 	}
 
 	location /post_response {
         # turn off logging here to avoid double logging
         access_log off;
-		add_header Content-Type text/plain
+		add_header 'Content-Type' 'text/plain';
         return 200 "ok";
     }
 
