--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -1,6 +1,6 @@
-log_format pixou_open_log '$request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language';
-log_format pixou_click_log '$request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$arg_uri';
-log_format pixou_ses_log '$request_id!!!!!!$msec!!!!!!$request_body';
+log_format pixou_open_log '!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language';
+log_format pixou_click_log '!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$arg_uri';
+log_format pixou_ses_log '!!!!!!$msec!!!!!!$request_body';
 
 upstream minimailapp {
 	server 127.0.0.1:9999;
