--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -1,6 +1,6 @@
-log_format pixou_open_log ' $request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language';
-log_format pixou_click_log ' $request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$arg_uri';
-log_format pixou_ses_log ' $request_id!!!!!!$msec!!!!!!$request_body';
+log_format pixou_open_log '$request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language';
+log_format pixou_click_log  ''$request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$arg_uri';
+log_format pixou_ses_log '$request_id!!!!!!$msec!!!!!!$request_body';
 
 upstream minimailapp {
 	server 127.0.0.1:9999;
@@ -60,12 +60,14 @@ server {
 	# pixou white pixel
 	location /pixou/open {
 		access_log /var/log/nginx/minimail.pixou.open.axx.log pixou_open_log;
+		add_header X-Request-ID $request_id;
 		empty_gif;
 	}
 
 	location /pixou/click {
 		access_log /var/log/nginx/minimail.pixou.click.axx.log pixou_click_log;
 		add_header 'Content-Type' 'text/plain';
+		add_header X-Request-ID $request_id;
 		return 200 "ok";
 	}
 
@@ -73,6 +75,7 @@ server {
         # turn off logging here to avoid double logging
         access_log off;
 		add_header 'Content-Type' 'text/plain';
+		add_header X-Request-ID $request_id;
         return 200 "ok";
     }
 
