--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+amqp==2.1.1
 astroid==1.4.8
 beautifulsoup4==4.5.1
+billiard==3.5.0.2
+celery==4.0.0
 cssselect==0.9.2
 cssutils==1.0.1
 defusedxml==0.4.1
 Django==1.10
+django-allauth==0.26.1
 flake8==3.0.4
 html5lib==0.999999999
 htmlmin==0.1.10
 isort==4.2.5
+kombu==4.0.0
 lazy-object-proxy==1.2.2
 lxml==3.6.4
 maxminddb==1.2.1
@@ -29,6 +34,7 @@ requests==2.10.0
 requests-oauthlib==0.6.2
 simplejson==3.8.2
 six==1.10.0
+vine==1.1.3
 webencodings==0.5
 wrapt==1.10.8
 yolk3k==0.9
