Increase file upload limit to 50MB.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -9,7 +9,7 @@ upstream minimailapp {
 
 server {
     server_name minimail.fullweb.io;
-	listen 80;
+    listen 80;
 
     listen 443 ssl;
     ssl_certificate     /etc/letsencrypt/live/minimail.fullweb.io/fullchain.pem;
@@ -46,6 +46,8 @@ server {
 
     access_log /var/log/nginx/minimail.axx.log;
     error_log /var/log/nginx/minimail.err.log;
+
+    client_max_body_size 50M;
 
     # Expire rules for static content
 
