--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -1,6 +1,9 @@
-log_format pixou_open_log '$request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language';
-log_format pixou_click_log  '$request_id!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$arg_uri';
-log_format pixou_ses_log '$request_id!!!!!!$msec!!!!!!$request_body';
+log_format pixou_open_log '$request_id!!!!!!open!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language';
+log_format pixou_click_log  '$request_id!!!!!!click!!!!!!$msec!!!!!!$arg_list!!!!!!$arg_campaign!!!!!!$arg_subscriber!!!!!!$remote_addr!!!!!!$http_user_agent!!!!!!$http_accept_language!!!!!!$arg_uri';
+log_format pixou_ses_delivery_log '$request_id!!!!!!delivery!!!!!!$msec!!!!!!$request_body';
+log_format pixou_ses_bounce_log '$request_id!!!!!!bounce!!!!!!$msec!!!!!!$request_body';
+log_format pixou_ses_complaint_log '$request_id!!!!!!complaint!!!!!!$msec!!!!!!$request_body';
+log_format pixou_ses_any_log '$request_id!!!!!!any!!!!!!$msec!!!!!!$request_body';
 
 upstream minimailapp {
 	server 127.0.0.1:9999;
@@ -59,13 +62,13 @@ server {
 
 	# pixou white pixel
 	location /pixou/open {
-		access_log /var/log/nginx/minimail.pixou.open.axx.log pixou_open_log;
+		access_log /var/log/nginx/minimail.pixou.axx.log pixou_open_log;
 		add_header X-Request-ID $request_id;
 		empty_gif;
 	}
 
 	location /pixou/click {
-		access_log /var/log/nginx/minimail.pixou.click.axx.log pixou_click_log;
+		access_log /var/log/nginx/minimail.pixou.axx.log pixou_click_log;
 		add_header 'Content-Type' 'text/plain';
 		add_header X-Request-ID $request_id;
 		return 200 "ok";
@@ -80,22 +83,22 @@ server {
     }
 
 	location = /callbacks/ses/delivery {
-        access_log /var/log/nginx/minimail.pixou.ses.delivery.axx.log pixou_ses_log;
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
         proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
     location = /callbacks/ses/bounce {
-        access_log /var/log/nginx/minimail.pixou.ses.bounce.axx.log pixou_ses_log;
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
         proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
     location = /callbacks/ses/complaint {
-        access_log /var/log/nginx/minimail.pixou.ses.complaint.axx.log pixou_ses_log;
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
         proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
 	location /callbacks {
-        access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_log;
+        access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
         proxy_pass http://minimail.fullweb.io/post_response/;
     }
 
