Add /pixou/click redirect on uri.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -70,9 +70,9 @@ server {
 
 	location /pixou/click {
 		access_log /var/log/nginx/minimail.pixou.axx.log pixou_click_log;
-		add_header 'Content-Type' 'text/plain';
 		add_header X-Request-ID $request_id;
-		return 200 "ok";
+		set_decode_base64 $dest $arg_uri;
+		return 301 $dest;
 	}
 
 	location /post_response {
