Add server_name into config.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -160,12 +160,18 @@ server {
 
 server {
     server_name www.minimail.im;
-    listen 80;
+    listen 80;	
     return 301 https://minimail.fullweb.io$request_uri;
 }
 
 server {
     server_name minimail.im;
+    listen 80;
+    return 301 https://minimail.fullweb.io$request_uri;
+}
+
+server {
+    server_name minimail.fullweb.io;
     listen 80;
     return 301 https://minimail.fullweb.io$request_uri;
 }
