Ensure SNS callbacks only accept requests from SNS's  IPs.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -6,8 +6,8 @@ log_format pixou_ses_complaint_log '$request_id!!!!!!complaint!!!!!!$msec!!!!!!$
 log_format pixou_ses_any_log '$request_id!!!!!!any!!!!!!$msec!!!!!!$request_body';
 
 upstream minimailapp {
-	server 127.0.0.1:9999;
-	#sticky cookie srv_id expires=1h domain=minimail.fullweb.io path=/;
+    server 127.0.0.1:9999;
+    #sticky cookie srv_id expires=1h domain=minimail.fullweb.io path=/;
 }
 
 server {
@@ -51,6 +51,82 @@ server {
 
     client_max_body_size 50M;
 
+    # pixou tracking for open and click
+
+    location /pixou/open {
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_open_log;
+        add_header X-Request-ID $request_id;
+        empty_gif;
+    }
+
+    location /pixou/click {
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_click_log;
+        add_header X-Request-ID $request_id;
+        set_decode_base64 $dest $arg_uri;
+        return 302 $dest;
+    }
+
+    # AWS SES callback, called by AWS SNS
+
+    # Allowed source SNS IP ranges
+    geo $is_sns {
+       default 0;
+        # US-EAST-1
+        207.171.167.101
+        207.171.167.25
+        207.171.167.26
+        207.171.172.6
+        54.239.98.0/24
+        54.240.217.16/29
+        54.240.217.8/29
+        54.240.217.64/28
+        54.240.217.80/29
+        72.21.196.64/29
+        72.21.198.64/29
+        72.21.198.72
+        72.21.217.0/24
+    }
+
+    location @log_post_response {
+        internal;
+        # turn off logging here to avoid double logging
+        access_log off;
+        add_header 'Content-Type' 'text/plain';
+        return 200 "ok";
+    }
+
+    location = /callbacks/ses/delivery {
+        if ($is_sns) {
+            access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
+            proxy_pass @log_post_response;
+        }
+	return 200 "nop"
+    }
+
+    location = /callbacks/ses/bounce {
+        if ($is_sns) {
+             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
+             proxy_pass @log_post_response;
+        }
+	return 200 "nop"
+    }
+
+    location = /callbacks/ses/complaint {
+        if ($is_sns) {
+             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
+             proxy_pass @log_post_response;
+        }
+	return 200 "nop"
+    }
+
+    location /callbacks {
+        if ($is_sns) {
+             access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
+             proxy_pass @log_post_response;
+        }
+	return 200 "nop"
+    }
+
     # Expire rules for static content
 
     # No default expire rule. This config mirrors that of apache as outlined in the
@@ -61,49 +137,6 @@ server {
     # future (if the default expire rule is 1 month). Therefore, do not use a
     # default expire rule with nginx unless your site is completely static
 
-	# pixou white pixel
-	location /pixou/open {
-		access_log /var/log/nginx/minimail.pixou.axx.log pixou_open_log;
-		add_header X-Request-ID $request_id;
-		empty_gif;
-	}
-
-	location /pixou/click {
-		access_log /var/log/nginx/minimail.pixou.axx.log pixou_click_log;
-		add_header X-Request-ID $request_id;
-		set_decode_base64 $dest $arg_uri;
-		return 302 $dest;
-	}
-
-	location /post_response {
-        # turn off logging here to avoid double logging
-        access_log off;
-		add_header 'Content-Type' 'text/plain';
-		add_header X-Request-ID $request_id;
-        return 200 "ok";
-    }
-
-	location = /callbacks/ses/delivery {
-        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
-        proxy_pass http://minimail.fullweb.io/post_response/;
-    }
-
-    location = /callbacks/ses/bounce {
-        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
-        proxy_pass http://minimail.fullweb.io/post_response/;
-    }
-
-    location = /callbacks/ses/complaint {
-        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
-        proxy_pass http://minimail.fullweb.io/post_response/;
-    }
-
-	location /callbacks {
-        access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
-        proxy_pass http://minimail.fullweb.io/post_response/;
-    }
-
-    # cache.appcache, your document html and data
     location ~* \.(?:manifest|appcache|html?|xml|json)$ {
         expires -1;
     }
@@ -159,25 +192,13 @@ server {
 }
 
 server {
-    server_name www.minimail.im;
-    listen 80;	
-    return 301 https://minimail.fullweb.io$request_uri;
+    server_name www.minimail.im minimail.im;
+    listen 80;    
+    return 301 https://minimail.im$request_uri;
 }
 
 server {
-    server_name minimail.im;
-    listen 80;
-    return 301 https://minimail.fullweb.io$request_uri;
-}
-
-server {
-    server_name minimail.fullweb.io;
-    listen 80;
-    return 301 https://minimail.fullweb.io$request_uri;
-}
-
-server {
-    server_name www.minimail.fullweb.io;
+    server_name minimail.fullweb.io www.minimail.fullweb.io;
     listen 80;
     return 301 https://minimail.fullweb.io$request_uri;
 }
