Fix nginx conf.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -5,6 +5,26 @@ log_format pixou_ses_bounce_log '$request_id!!!!!!bounce!!!!!!$msec!!!!!!$reques
 log_format pixou_ses_complaint_log '$request_id!!!!!!complaint!!!!!!$msec!!!!!!$request_body';
 log_format pixou_ses_any_log '$request_id!!!!!!any!!!!!!$msec!!!!!!$request_body';
 
+# Allowed source SNS IP ranges
+geo $is_sns {
+    default 0;
+    # US-EAST-1 SNS IPs
+    207.171.167.101  1;
+    207.171.167.25   1;
+    207.171.167.26   1;
+    207.171.172.6    1;
+    54.239.98.0/24   1;
+    54.240.217.16/29 1;
+    54.240.217.8/29  1;
+    54.240.217.64/28 1;
+    54.240.217.80/29 1;
+    72.21.196.64/29  1;
+    72.21.198.64/29  1;
+    72.21.198.72     1;
+    72.21.217.0/24   1;
+}
+
+
 upstream minimailapp {
     server 127.0.0.1:9999;
     #sticky cookie srv_id expires=1h domain=minimail.fullweb.io path=/;
@@ -68,26 +88,7 @@ server {
 
     # AWS SES callback, called by AWS SNS
 
-    # Allowed source SNS IP ranges
-    geo $is_sns {
-       default 0;
-        # US-EAST-1
-        207.171.167.101
-        207.171.167.25
-        207.171.167.26
-        207.171.172.6
-        54.239.98.0/24
-        54.240.217.16/29
-        54.240.217.8/29
-        54.240.217.64/28
-        54.240.217.80/29
-        72.21.196.64/29
-        72.21.198.64/29
-        72.21.198.72
-        72.21.217.0/24
-    }
-
-    location @log_post_response {
+    location /log_post_response {
         internal;
         # turn off logging here to avoid double logging
         access_log off;
@@ -98,23 +99,23 @@ server {
     location = /callbacks/ses/delivery {
         if ($is_sns) {
             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
-            proxy_pass @log_post_response;
+            proxy_pass http://$server_name/log_post_response;
         }
 	return 200 "nop"
     }
 
     location = /callbacks/ses/bounce {
         if ($is_sns) {
-             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
-             proxy_pass @log_post_response;
+            access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
+            proxy_pass http://$server_name/log_post_response;
         }
 	return 200 "nop"
     }
 
     location = /callbacks/ses/complaint {
         if ($is_sns) {
-             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
-             proxy_pass @log_post_response;
+            access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
+            proxy_pass http://$server_name/log_post_response;
         }
 	return 200 "nop"
     }
@@ -122,7 +123,7 @@ server {
     location /callbacks {
         if ($is_sns) {
              access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
-             proxy_pass @log_post_response;
+             proxy_pass http://$server_name/log_post_response;
         }
 	return 200 "nop"
     }
@@ -198,7 +199,7 @@ server {
 }
 
 server {
-    server_name minimail.fullweb.io www.minimail.fullweb.io;
+    server_name www.minimail.fullweb.io;
     listen 80;
     return 301 https://minimail.fullweb.io$request_uri;
 }
