Add semi-colons were missing in nginx conf.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -101,7 +101,7 @@ server {
             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
             proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop"
+	return 200 "nop";
     }
 
     location = /callbacks/ses/bounce {
@@ -109,7 +109,7 @@ server {
             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
             proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop"
+	return 200 "nop";
     }
 
     location = /callbacks/ses/complaint {
@@ -117,7 +117,7 @@ server {
             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
             proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop"
+	return 200 "nop";
     }
 
     location /callbacks {
@@ -125,7 +125,7 @@ server {
              access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
              proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop"
+	return 200 "nop";
     }
 
     # Expire rules for static content
