--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -24,6 +24,14 @@ geo $is_sns {
     72.21.217.0/24   1;
 }
 
+# Say true for localhost
+geo $is_localhost {
+    default 0;
+    localhost 1;
+    127.0.0.0/24 1;
+}
+
+
 
 upstream minimailapp {
     server 127.0.0.1:9999;
@@ -89,11 +97,13 @@ server {
     # AWS SES callback, called by AWS SNS
 
     location /log_post_response {
-        internal;
-        # turn off logging here to avoid double logging
-        access_log off;
-        add_header 'Content-Type' 'text/plain';
-        return 200 "ok";
+        if($is_localhost) {
+            # turn off logging here to avoid double logging
+            access_log off;
+            add_header 'Content-Type' 'text/plain';
+            return 200 "ok";
+        }
+        return 204;
     }
 
     location = /callbacks/ses/delivery {
@@ -101,7 +111,7 @@ server {
             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
             proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop";
+    return 200 "nop";
     }
 
     location = /callbacks/ses/bounce {
@@ -109,7 +119,7 @@ server {
             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
             proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop";
+    return 200 "nop";
     }
 
     location = /callbacks/ses/complaint {
@@ -117,7 +127,7 @@ server {
             access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
             proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop";
+    return 200 "nop";
     }
 
     location /callbacks {
@@ -125,7 +135,7 @@ server {
              access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
              proxy_pass http://$server_name/log_post_response;
         }
-	return 200 "nop";
+    return 200 "nop";
     }
 
     # Expire rules for static content
