fix post body log for ses callbacks.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -37,6 +37,17 @@ upstream minimailapp {
     #sticky cookie srv_id expires=1h domain=minimail.fullweb.io path=/;
 }
 
+server {
+    server_name localhost;
+    listen 8088;
+
+    location /log_post_response {
+        # turn off logging here to avoid double logging
+        access_log off;
+        add_header 'Content-Type' 'text/plain';
+        return 200 "ok";
+    }
+}
 
 server {
     server_name minimail.fullweb.io;
@@ -96,46 +107,25 @@ server {
 
     # AWS SES callback, called by AWS SNS
 
-    location /log_post_response {
-        if ($is_localhost) {
-            # turn off logging here to avoid double logging
-            access_log off;
-            add_header 'Content-Type' 'text/plain';
-            return 200 "ok";
-        }
-        return 204;
-    }
-
     location = /callbacks/ses/delivery {
-        if ($is_sns) {
-            access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
-            proxy_pass http://$server_name/log_post_response;
-        }
-    return 200 "nop";
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_delivery_log;
+        proxy_pass http://localhost:8088/log_post_response;
     }
 
     location = /callbacks/ses/bounce {
-        if ($is_sns) {
-            access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
-            proxy_pass http://$server_name/log_post_response;
-        }
-    return 200 "nop";
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_bounce_log;
+        proxy_pass http://localhost:8088/log_post_response;
+
     }
 
     location = /callbacks/ses/complaint {
-        if ($is_sns) {
-            access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
-            proxy_pass http://$server_name/log_post_response;
-        }
-    return 200 "nop";
+        access_log /var/log/nginx/minimail.pixou.axx.log pixou_ses_complaint_log;
+        proxy_pass http://localhost:8088/log_post_response;
     }
 
     location /callbacks {
-        if ($is_sns) {
-             access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
-             proxy_pass http://$server_name/log_post_response;
-        }
-    return 200 "nop";
+         access_log /var/log/nginx/minimail.pixou.ses.any.axx.log pixou_ses_any_log;
+         proxy_pass http://localhost:8088/log_post_response;
     }
 
     # Expire rules for static content
@@ -205,7 +195,7 @@ server {
 
 server {
     server_name www.minimail.im minimail.im;
-    listen 80;    
+    listen 80;
     return 301 https://minimail.im$request_uri;
 }
 
