--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 amqp==2.1.1
+argon2-cffi==16.3.0
 astroid==1.4.8
 beautifulsoup4==4.5.1
 billiard==3.5.0.2
 celery==4.0.0
+cffi==1.9.1
 cssselect==0.9.2
 cssutils==1.0.1
 defusedxml==0.4.1
@@ -24,6 +26,7 @@ Pillow==3.3.1
 premailer==3.0.1
 psycopg2==2.6.2
 pycodestyle==2.0.0
+pycparser==2.17
 pyflakes==1.2.3
 pylint==1.6.4
 python-dateutil==2.5.3
