Add basic auth.

--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -182,6 +182,8 @@ server {
     }
 
     location / {
+      auth_basic "Restricted Content";
+      auth_basic_user_file /etc/nginx/.htpasswd;
       try_files $uri @django_app;
     }
 
