--- a/server_conf/minimail.nginx.conf
+++ b/server_conf/minimail.nginx.conf
@@ -50,7 +50,7 @@ server {
 }
 
 server {
-    server_name minimail.fullweb.io;
+    server_name minimail.fullweb.io minimail.im;
     listen 80;
 
     listen 443 ssl;
